exports[`ImmutableListView renders Map with section headers 1`] = `
<ScrollView
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  immutableData={
    Object {
      "first": Array [
        "m",
        "a",
        "p",
      ],
      "fourth": Array [
        "bar",
      ],
      "second": Array [
        "foo",
      ],
      "third": Array [],
    }
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={true}
  renderRow={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={
    Array [
      0,
      4,
      6,
      7,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    header={true}>
    first (3 items)
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"m\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"a\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"p\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    header={true}>
    second (1 items)
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"foo\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    header={true}>
    third (0 items)
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    header={true}>
    fourth (1 items)
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"bar\"
  </Text>
</ScrollView>
`;

exports[`ImmutableListView renders Map without section headers 1`] = `
<ScrollView
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  immutableData={
    Object {
      "first": Array [
        "m",
        "a",
        "p",
      ],
      "fourth": Array [
        "bar",
      ],
      "second": Array [
        "foo",
      ],
      "third": Array [],
    }
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={true}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    [\"m\",\"a\",\"p\"]
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    [\"foo\"]
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    []
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    [\"bar\"]
  </Text>
</ScrollView>
`;

exports[`ImmutableListView renders basic List 1`] = `
<ScrollView
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  immutableData={
    Array [
      "lists",
      "are",
      "great",
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={true}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"lists\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"are\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"great\"
  </Text>
</ScrollView>
`;

exports[`ImmutableListView renders basic Set 1`] = `
<ScrollView
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  immutableData={
    Array [
      "one",
      "two",
      "three",
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={true}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"one\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"two\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"three\"
  </Text>
</ScrollView>
`;

exports[`ImmutableListView renders nested List 1`] = `
<ScrollView
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  immutableData={
    Array [
      Array [
        "so",
        "are",
      ],
      Array [
        "nested",
        "lists",
      ],
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={true}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    [\"so\",\"are\"]
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    [\"nested\",\"lists\"]
  </Text>
</ScrollView>
`;

exports[`ImmutableListView renders with empty data 1`] = `
<ScrollView
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  immutableData={Array []}
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={true}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []} />
`;

exports[`ImmutableListView with delayed rendering renders basic List after interactions 1`] = `
<ScrollView
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  immutableData={
    Array [
      "lists",
      "are",
      "great",
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={true}
  renderRow={[Function]}
  rowsDuringInteraction={1}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"lists\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"are\"
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"great\"
  </Text>
</ScrollView>
`;

exports[`ImmutableListView with delayed rendering renders basic List during interactions 1`] = `
<ScrollView
  dataSource={
    ListViewDataSource {
      "items": NaN,
    }
  }
  enableEmptySections={true}
  immutableData={
    Array [
      "lists",
      "are",
      "great",
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={true}
  renderRow={[Function]}
  rowsDuringInteraction={1}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    \"lists\"
  </Text>
</ScrollView>
`;
